2016-11-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_brace_count.t: Disable some tests.

2016-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (_count_opened_tree_braces): Don't
	check for parentheses in the arguments or contents when 
	balancing parentheses.
	(parse_node_manual): If parentheses do not balance, consider the 
	whole argument to be the node name.

2016-11-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_abort_empty_line): Include element type
	in "ABORT EMPTY" debugging message.
	(_parse_node_manual): Update comment.
	(_parse_texi): Remove unnecessary deletion of 'normalized'
	value.
	* tp/Texinfo/Structuring.pm (nodes_tree): Create a new parser 
	object to parse the "TOP_NODE_UP" string.

2016-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (@example): Add missing ) after @pxref.
	(@cartouche): Make example and output match.
	(@table): Remove superfluous closing quote (`indicating'' to 
	`indicating').
	(Internationalization): Change the word "yourself" to "the one".
	(@documentlanguage): Add missing closing quote.
	(Testing for Texinfo Commands): Change "consider true X" to
	"consider X to be true".
	(Format with texi2dvi): Add missing ) after @pxref.
	(Invoking texi2any): Change "texi2any accept" to "texi2any 
	accepts".
	(HTML Translation): Add missing ) after @pxref.

	All reports by Wensheng Xie <xiewensheng@gmail.com>.

2016-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Top): In @detailmenu for Info format 
	description, refer to nodes with their names instead of shorter 
	labels.  This is so that, for example, "info texinfo printindex"
	goes to the index entry for "printindex" instead of the
	"Info Format Printindex" node.
	(Other Customization Variables): Remove 
	'TEXINFO_COLUMN_FOR_DESCRIPTION' and 'indent_menu_descriptions'.

2016-11-08  Gavin Smith  <gavinsmith0123@gmail.com>

	Delay node name normalization until after parser is finished.