@@ -9,11 +9,14 @@ $result_trees{'unknown_value'} = {
   'contents' => [
     {
       'cmdname' => 'value',
+      'contents' => [],
+      'parent' => {},
       'type' => 'unknown'
     }
   ],
   'type' => 'text_root'
 };
+$result_trees{'unknown_value'}{'contents'}[0]{'parent'} = $result_trees{'unknown_value'};
 
 $result_texis{'unknown_value'} = '@value{unknown}';
 
